--- a/log in cods.html
+++ b/log in cods.html
@@ -11,19 +11,19 @@
     <form class="forma">
         <h1 class="virsraksts">Login</h1>
 
-        <div>
-            <label for="email">Email*</label>
+        <div class="inputContainer">
+            <label for="email" class="emaillabel">Email*</label>
             <input type="text" id="email">  
         </div>
 
-        <div>   
-            <label for="password">Password*</label>
+        <div class="inputContainer">
+            <label for="password" class="emaillabel">Password*</label>
             <input type="text" id="password">
         </div>
         
         <div>
-            <input type="checkbox" id="remember">
-            <label for="remember">Remember me</label>
+            <input type="checkbox" id="remember" class="checkbox">
+            <label for="remember" class="rememberMe">Remember me</label>
         </div>
         
         <button>Login</button>
